--- a/src/main/resources/text_en_US.properties
+++ b/src/main/resources/text_en_US.properties
@@ -43,3 +43,6 @@ emptydesiredphone = empty desired phone!
 invalidphone = invalid phone
 yourapplicationisaccepted = your application is accepted
 Returntocabinet = Return to cabinet
+Theapartmentwassuccessfullyadded = The apartment was successfully added
+DELETEROOM = DELETE ROOM
+deleteRoom = apartment removed
